# research-mind

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: reader_agent.py  search_agent.py
tools/: scrape_url.py  web_search.py
utils/: chains.py  config.py  prompts.py
