[project]
name = "research-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-tavily>=0.2.18",
    "lxml>=6.1.1",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
]
